welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:23: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:29: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:39: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:49: error: not found: value dogHouse
		dogHouse();		
                ^